fixes for latest libs

--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ android {
     }
     buildFeatures {
         viewBinding = true
+        buildConfig = true
     }
     compileOptions {
         sourceCompatibility "17"
@@ -86,12 +87,12 @@ dependencies {
     implementation 'com.github.evrencoskun:TableView:v0.8.9.4'
     implementation 'com.github.miguelbcr:TableFixHeaders-Wrapper:0.2.0'
     implementation 'com.github.scottyab:showhidepasswordedittext:0.8'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation('androidx.legacy:legacy-support-v4:1.0.0') {
 //        force = true
     }
-    api 'com.google.android.material:material:1.7.0'
-    api 'androidx.preference:preference:1.2.0'
+    api 'com.google.android.material:material:1.12.0'
+    api 'androidx.preference:preference:1.2.1'
     implementation 'com.github.oli107:material-range-bar:1.4.6'
     implementation 'com.github.barsrb:hyperlog-android:master-SNAPSHOT'
 
