--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,6 @@ dependencies {
 
     implementation 'androidx.work:work-runtime:2.9.1'
     implementation project(':easypicker')
-    implementation 'com.solusguard.hyperlog:hyperlog:1.1.0'
+    implementation 'com.github.barsrb:hyperlog-android:master-SNAPSHOT'
 
 }
