add ngw after ngid login, prompt fix, and some more

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -130,5 +130,18 @@
             </intent-filter>
         </receiver>
 
+        <receiver
+            android:name=".service.TrackerReceiver"
+            android:exported="true"
+            android:enabled="true"
+            android:process=":tracks"
+            >
+            <intent-filter>
+                <action android:name="com.example.ACTION_TRACKER_MESSAGE" />
+            </intent-filter>
+        </receiver>
+
+
+
     </application>
 </manifest>
